# Medix

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  PLAN.md  TAG.md  index.html  package.json  vitest.config.ts
docs/: IMAGE_TOOLS.md  VIDEO.md  design-language.md  media-import-metadata-optimization-plan.md  pitfalls.md  semantic-search-json-caption-plan.md  variant-browse-filter-design.md
docs/superpowers/plans/: 2026-06-06-video-support.md  2026-06-24-structured-caption-grammar-plan.md  2026-06-29-variant-import-timing.md  2026-06-30-comfyui-integration.md
docs/superpowers/specs/: 2026-05-31-ai-image-generation-design.md  2026-05-31-prompt-history-and-queue-badge.md  2026-06-06-video-support-design.md  2026-06-24-structured-caption-grammar-design.md  2026-06-29-variant-import-timing-design.md  2026-06-30-comfyui-integration-design.md
extension/: background.js  manifest.json  popup.html  popup.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: import_bench.rs  parser_bench.rs  phash_bench.rs  search_bench.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: embedding.rs  llamacpp.rs  mod.rs  ollama.rs  server.rs
src-tauri/src/ai/imagine/: comfyui.rs  mod.rs  queue.rs  workflow.rs  xai.rs
src-tauri/src/captions/: mod.rs
src-tauri/src/commands/: browse.rs  caption.rs  collection.rs  comfyui.rs  export.rs  imagine.rs  media.rs  mod.rs  model.rs  settings.rs  tag.rs  thumbnail.rs  variant.rs
src-tauri/src/db/: comfyui.rs  mod.rs
src-tauri/src/export/: export_tests.rs  mod.rs
src-tauri/src/media/: import.rs  media_tests.rs  mod.rs  phash.rs  thumbnail.rs  video_import.rs  video_metadata.rs  video_thumbnail.rs
src-tauri/src/models/: mod.rs
src-tauri/src/search/: mod.rs  parser.rs  search_tests.rs  semantic.rs
src-tauri/src/server/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/tag/: mod.rs
src-tauri/src/variants/: mod.rs
src/components/AiGenPage/: AiGenPage.tsx
src/components/AllMedia/: AllMedia.tsx  CollectionView.tsx
src/components/CollectionsPage/: CollectionsPage.tsx
src/components/ConfirmDialog/: ConfirmDialog.test.tsx  ConfirmDialog.tsx
src/components/DetailPanel/: DetailPanel.tsx
src/components/DropZone/: DropZone.tsx
src/components/ExportDialog/: ExportDialog.tsx
src/components/Gallery/: Gallery.tsx
src/components/ImagineDialog/: ImagineDialog.tsx
src/components/Layout/: Layout.tsx  icons.tsx
src/components/Lightbox/: Lightbox.tsx
src/components/SearchBar/: SearchBar.test.tsx  SearchBar.tsx
src/components/Settings/: Settings.tsx
src/components/TableView/: TableView.tsx
src/components/Tags/: Tags.tsx
src/components/TitleBar/: TitleBar.tsx  WindowControls.tsx
src/components/Toast/: Toast.tsx
src/components/Trash/: Trash.tsx
src/hooks/: usePromptHistory.ts  useThumbnail.ts
src/lib/: tauri.ts
src/stores/: appStore.test.ts  appStore.ts
src/types/: ai.ts  browse.ts  caption.ts  collection.ts  comfyui.ts  export.ts  media.ts  search.ts  tag.ts  variant.ts
tests/: _helpers.sh  cascade.sh  comfyui.sh  integrity.sh  operations.sh  search.sh  tags-collections.sh  variants-browse.sh
