[package]
name = "medix"
version = "0.1.0"
description = "Media Dataset Manager"
authors = ["bronze107"]
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled", "chrono", "serde_json", "uuid"] }
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[profile.release]
opt-level = 3
lto = true
strip = true
