[package]
name = "medix"
version = "0.1.0"
description = "Media Dataset Manager"
authors = ["bronze107"]
edition = "2021"
rust-version = "1.78"
default-run = "medix"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled", "chrono", "serde_json", "uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.27"
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }
libjpeg-turbo-rs = "0.6"
rayon = "1"
kamadak-exif = "0.6"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "blocking"] }
tiny_http = "0.12"
which = "7"
zip = "2"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
strip = true

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "phash_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "import_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bin]]
name = "medix-cli"
path = "src/bin/cli.rs"
